> fixed out of bounds check on right and bottom of page > renamed "main" to "preparing" for better understandability for user

--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,14 @@ ul li{
 }
 
 #replace_LI{
-    margin-left: 82%;
+    margin-left: 32%;
+    padding: 0px;
+}
+#centerY{
+    margin-left: 0%;
+    padding: 0px;
+}
+#centerX{
+    margin-left:42%;
     padding: 0px;
 }
